--- a/templates/recent_orders.html
+++ b/templates/recent_orders.html
@@ -22,9 +22,15 @@
     </table>
 </button>
 
-    {% for item in items %}
+    
 <div class="panel">
     <table>
+        <tr>
+            <th>Item</th>
+            <th>Item Total</th>
+            <th>Item Quantity</th>
+        </tr>
+        {% for item in items %}
         {% if item.oid == order.oid %}
         <tr>
             <td>{{item.name}}</td>
